--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </li>
                 <li>
                     <a href="#">Наші послуги</a>
-                    <ul class="inside">
+                    <ul class="inside inside-horizontal">
                     <li>
                         <a href="#">Видоїти корову</a>
                     </li>
